Squashed commit of the following:
commit 848abd577a0594cd6b8f281d73ca5aec1ea52c65
Author: PranavMehrotra <87844730+PranavMehrotra@users.noreply.github.com>
Date:   Thu Feb 9 19:20:38 2023 +0530

    Final submission Assgn2

commit dcd9430ebe59234a8dc5bd161996dee1b82de6b5
Author: PranavMehrotra <87844730+PranavMehrotra@users.noreply.github.com>
Date:   Thu Feb 9 19:19:13 2023 +0530

    Final Submission Assgn2

commit 55f7527a0cc489c93ada8301e5395d30767cc010
Author: PranavMehrotra <87844730+PranavMehrotra@users.noreply.github.com>
Date:   Thu Feb 9 18:49:30 2023 +0530

    Final Pre Submission Assgn2

commit d89eb4e75fba182fea5f51d55615077012ae72a7
Author: PranavMehrotra <87844730+PranavMehrotra@users.noreply.github.com>
Date:   Thu Feb 9 18:45:15 2023 +0530

    Final Pre submission Assgn2

commit ef183311f4d93e050b159a13daf32115da7429b9
Author: adityasoni9998 <74196547+adityasoni9998@users.noreply.github.com>
Date:   Thu Feb 9 16:32:56 2023 +0530

    Update assgn2.squashbug.heuristic.txt

commit 9c15bd3d076eba3bf412d62c5a9b8b1929d4a0c7
Author: adityasoni9998 <74196547+adityasoni9998@users.noreply.github.com>
Date:   Thu Feb 9 16:17:35 2023 +0530

    final push, dont call me now for this assignment

commit ff0c7936804271b439eb79c2869943c781d63a20
Author: adityasoni9998 <74196547+adityasoni9998@users.noreply.github.com>
Date:   Thu Feb 9 14:56:51 2023 +0530

    final commit

commit df744e9a97dee5ae0e773596da0bd953c38964e8
Author: adityasoni9998 <74196547+adityasoni9998@users.noreply.github.com>
Date:   Thu Feb 9 10:24:20 2023 +0530

    Update malware_handler.cpp

commit b96b24486c62dd1942ce045525f3e7a379913f35
Author: anandparikh4 <98024272+anandparikh4@users.noreply.github.com>
Date:   Thu Feb 9 01:35:13 2023 +0530

    All done!

commit 4e1e8be9bcef0afbcea1fe1f2d99600a82a2d11e
Author: anandparikh4 <98024272+anandparikh4@users.noreply.github.com>
Date:   Thu Feb 9 01:20:01 2023 +0530

    All done!

    Ek bar poora test kar do. EK BHI LINE CODE MAT CHANGE KARNA

--- a/Assignments/A2/.vscode/settings.json
+++ b/Assignments/A2/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "process.h": "c",
         "wait.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "stdio.h": "c",
+        "string": "cpp",
+        "*.tcc": "cpp",
+        "iostream": "cpp"
     }
 }
